--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>random</h1>
+    <h1>About Us</h1>
+     <h2><b><u>Basic Information</u></b></h2>
+    <p><b>* Name:</b> <i>Rohan Sugriv Shedage</i></p>
+    <p><b>* Age:</b> <u>21</u></p>
+    <p><b>* Gender:</b> <i>Male</i></p>
+    <hr/>
 </body>
 </html>
