city info added

--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
     <p><b>* Age:</b> <u>21</u></p>
     <p><b>* Gender:</b> <i>Male</i></p>
     <hr/>
+    <h3><b><u>City</u></b></h3>
+    <p>I live in the beautiful city of <b><u>Satara</u></b>, known for its culture and education.</p>
+    <p>Earlier I lived in <del>Phaltan</del>, but I moved to <u>Baramati</u> for studies.</p>
+    <hr>
 </body>
 </html>
