college info added

--- a/index.html
+++ b/index.html
@@ -17,5 +17,9 @@
     <p>I live in the beautiful city of <b><u>Satara</u></b>, known for its culture and education.</p>
     <p>Earlier I lived in <del>Phaltan</del>, but I moved to <u>Baramati</u> for studies.</p>
     <hr>
+    <h4><b><u>College</u></b></h4>
+    <p>I am currently studying at <b><i>Vidya prathistan Arts commerce and science, Baramati</i></b>, Pune.</p>
+    <p>I'm pursuing a degree in <u>Computer Science</u>.</p>
+    <hr>
 </body>
 </html>
