--- a/index.html
+++ b/index.html
@@ -21,5 +21,13 @@
     <p>I am currently studying at <b><i>Vidya prathistan Arts commerce and science, Baramati</i></b>, Pune.</p>
     <p>I'm pursuing a degree in <u>Computer Science</u>.</p>
     <hr>
+    <h5><b><u>Hobbies</u></b></h5>
+    <ul>
+        <li>Coding</li>
+        <li>Online Games</li>
+        <li>Movies</li>
+        <li>sleeping</li>
+    </ul>
+    <hr>
 </body>
 </html>
