--- a/box-shadow.html
+++ b/box-shadow.html
@@ -18,7 +18,7 @@
         text-align: center;
     }
 
-    .card-imges{
+    .card-images{
         padding: 10px;
         border: lavenderblush;
     }
@@ -32,25 +32,25 @@
  </head>
 <body>
     <div class="cards">
-    <img class="card-imges" src="./imges/burger.png" alt="burger">
+    <img class="card-images" src="./imges/burger.png" alt="burger">
     <h1 class="card-title">Burger</h1>
     </div>
 
 
     <div class="cards">
-    <img class="card-imges" src="./imges/pizza.png" alt="pizza">
+    <img class="card-images" src="./imges/pizza.png" alt="pizza">
     <h1 class="card-title">Pizza</h1>
     </div>
 
 
     <div class="cards">
-    <img class="card-imges" src="./imges/popcorn.png" alt="popcorn">
+    <img class="card-images" src="./imges/popcorn.png" alt="popcorn">
     <h1 class="card-title">Popcorn</h1>
     </div>
 
 
     <div class="cards">
-    <img class="card-imges" src="./imges/beverage.png" alt="pepsi">
+    <img class="card-images" src="./imges/beverage.png" alt="pepsi">
     <h1 class="card-title">Pepsi</h1>    
     </div>
 </body>
