--- a/box-shadow.html
+++ b/box-shadow.html
@@ -28,30 +28,56 @@
          padding: 5px 10px;
          transition: 2s;
     }
+
+    .btn {
+        padding: 3px 6px;
+        margin: 3px 6px;
+        color: red;
+        background-color: bisque;
+        border: 2px solid black;
+        border-radius: 10px;
+    }
+
+    .btn:hover{
+        background-color: steelblue;
+        color: brown;
+        transition: 1s;
+        padding: 5px 10px;
+        margin: 5px 10px;
+        box-shadow: 2px 2px 50px 5px red;
+        display: inline-block;
+    }
    </style>
  </head>
 <body>
     <div class="cards">
-    <img class="card-images" src="./imges/burger.png" alt="burger">
+    <img class="card-images" src="./images/burger.png" alt="burger">
     <h1 class="card-title">Burger</h1>
     </div>
 
 
     <div class="cards">
-    <img class="card-images" src="./imges/pizza.png" alt="pizza">
+    <img class="card-images" src="./images/pizza.png" alt="pizza">
     <h1 class="card-title">Pizza</h1>
     </div>
 
 
     <div class="cards">
-    <img class="card-images" src="./imges/popcorn.png" alt="popcorn">
+    <img class="card-images" src="./images/popcorn.png" alt="popcorn">
     <h1 class="card-title">Popcorn</h1>
     </div>
 
 
     <div class="cards">
-    <img class="card-images" src="./imges/beverage.png" alt="pepsi">
+    <img class="card-images" src="./images/beverage.png" alt="pepsi">
     <h1 class="card-title">Pepsi</h1>    
     </div>
+
+    <button class="btn"> click Me </button>
+
+    <button class="btn"> Register Now </button>
+
+    <button class="btn"> Log In </button>
+
 </body>
 </html>
