3 ways of css is added

--- a/stylebutton.html
+++ b/stylebutton.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <title>Button style</title>
-
     <style>
        .Sign {
           background-color: tomato;
@@ -11,7 +10,6 @@
           border-radius: 5px 10px;
           font-size: 20px;
           padding: 10px 20px;
-          cursor: pointer;
        }
 
        .Log {
@@ -21,40 +19,41 @@
           border-radius: 20px 10px;
           font-size: 20px;
           padding: 10px 20px;
-          cursor: pointer;
        }
 
        #Click {
           background-color: pink;
           color: black;
           border: none;
-          border-radius: 20px;
+          border-radius: 0px 10px;
           font-size: 20px;
           padding: 10px 20px;
-          cursor: pointer;
        }
 
-       .paragraph {
-          background-color: pink;
-          color: black;
-          border: 2px solid black;
+       .btn4{
+         background-color: aqua;
+         color: black;
+         border:none;
+          border-radius: 3px 7px;
           font-size: 20px;
-          padding: 20px;
-          margin: 10px;
+          padding: 10px 20px;
+       }
+
+        .btn5{
+         background-color: yellow;
+         color: black;
+         border:none;
+          border-radius: 30px ;
+          font-size: 20px;
+          padding: 10px 20px;
        }
     </style>
 </head>
 <body>
-
     <button class="Sign">Sign in</button>
     <button class="Log">Log in</button>
     <button id="Click">Click Me</button>
-
-    <p class="paragraph">
-        A paragraph is a self-contained unit of discourse in writing dealing with a particular point or idea.
-        Though not required by the orthographic conventions of any language with a writing system, 
-        paragraphs are a conventional means of organizing extended segments of prose.
-    </p>
-
+    <button class="btn4">Register Now</button>
+    <button class="btn5">Add To Cart</button>
 </body>
 </html>
